--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,24 +1,122 @@
-/* styles.css */
+/* Add this CSS to your existing stylesheet or create a new one */
 * {
-  margin: 0;
   box-sizing: border-box;
+  margin: 0;
 }
+
+body {
+  background: linear-gradient(to right, #182628, #65ccb8);
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+}
+
+.index-page {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 20px;
+}
+
+.todo-item {
+  background-color: #fff;
+  border-radius: 8px;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.todo-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.todo-title {
+  font-size: 20px;
+  text-decoration: none;
+  color: #182628;
+}
+
+.todo-created-at {
+  font-size: 14px;
+  color: #888;
+}
+
+.todo-description {
+  font-size: 16px;
+  color: #555;
+}
+
+/* HOME */
+
+.home-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: linear-gradient(135deg, #182628, #65ccb8);
+}
+
+.home-content {
+  text-align: center;
+  max-width: 600px;
+  padding: 20px;
+  color: #fff;
+}
+
+.home-heading {
+  font-size: 32px;
+  margin-bottom: 20px;
+}
+
+.home-paragraph {
+  font-size: 18px;
+  margin-bottom: 30px;
+}
+
+.home-links {
+  display: flex;
+  justify-content: center;
+}
+
+.home-link {
+  font-size: 16px;
+  text-decoration: none;
+  color: #fff;
+  margin: 0 10px;
+  padding: 10px 20px;
+  border: 2px solid #fff;
+  border-radius: 5px;
+  transition: background-color 0.3s, color 0.3s, transform 0.3s;
+}
+
+.home-link:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+  color: #fff;
+  transform: scale(1.05);
+}
+
+.btn {
+  cursor: pointer;
+}
+
+/* ROOT LAYOUT(NAVBAR) */
+
 .root-layout {
   font-family: Arial, sans-serif;
 }
 
 .header {
   display: flex;
-  align-items: center;
   justify-content: space-between;
+  align-items: center;
   padding: 20px;
-  background-color: #333;
+  background-color: #182628;
   color: #fff;
 }
 
 .logo {
   font-size: 24px;
-  font-weight: bold;
 }
 
 .nav {
@@ -26,68 +124,219 @@
 }
 
 .nav-link {
-  margin-right: 20px;
-  color: #fff;
   text-decoration: none;
-}
-
-.todo-list {
-  margin-top: 20px;
-}
-
-.todo-item {
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  color: #fff;
   padding: 10px;
+  margin-right: 10px;
+}
+
+.user-section {
+  display: flex;
+  align-items: center;
+}
+
+.logout-btn {
+  background-color: #3b945e;
+  color: #fff;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-left: 10px;
+}
+
+.logout-btn:hover {
+  background-color: #57ba98;
+}
+
+.login-signup a {
+  text-decoration: none;
+  color: #fff;
+  margin-left: 10px;
+}
+
+/* SHOW TODO */
+
+.show-todo {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.show-todo h2 {
+  font-size: 24px;
   margin-bottom: 10px;
 }
 
-.todo-item.completed {
-  background-color: #e6ffe6;
-}
-
-.todo-header {
-  display: flex;
-  justify-content: space-between;
-}
-
-.todo-title {
-  margin: 0;
+.todo-status {
   font-weight: bold;
+  margin-bottom: 10px;
 }
 
 .todo-description {
-  margin-top: 5px;
+  margin-bottom: 20px;
 }
 
 .todo-created-at {
-  font-size: 12px;
   color: #888;
+  margin-bottom: 20px;
+}
+
+.btn {
+  padding: 10px 20px;
+  background-color: #57ba98;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  text-decoration: none;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.btn:hover {
+  background-color: #3b945e;
+}
+
+.delete-form {
+  margin-bottom: 1rem;
+}
+
+/* NEW TODO */
+
+.new-todo {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.new-todo h2 {
+  font-size: 24px;
+  margin-bottom: 20px;
 }
 
 .todo-form {
-  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
 }
 
 .todo-input {
-  width: 100%;
   margin-bottom: 10px;
-  padding: 5px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
 }
 
 .todo-checkbox {
   margin-bottom: 10px;
 }
 
-.todo-button {
-  background-color: #333;
-  color: #fff;
-  border: none;
-  padding: 10px 20px;
-  cursor: pointer;
+.todo-checkbox input {
+  margin-left: 10px;
+}
+
+/* EDIT TODO */
+.edit-todo {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.edit-todo h2 {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.todo-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.todo-input {
+  margin-bottom: 10px;
+  padding: 10px;
+  border: 1px solid #ccc;
   border-radius: 5px;
 }
 
-.todo-button:hover {
-  background-color: #555;
+.todo-checkbox {
+  margin-bottom: 10px;
 }
+
+.todo-checkbox input {
+  margin-left: 10px;
+}
+
+.edit-todo button[type="submit"] {
+  margin-bottom: 1rem;
+}
+
+/* LOGIN */
+
+.login-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  max-width: 400px;
+  margin: 0 auto;
+  margin-top: 3rem;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.login-form h2 {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.login-form form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+}
+
+.login-input {
+  margin-bottom: 10px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+/* SIGNUP */
+
+.signup-form {
+  max-width: 400px;
+  margin: 0 auto;
+  margin-top: 3rem;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.signup-form h2 {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.signup-input {
+  margin-bottom: 10px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+/* DASHBOARD CSS IN SEPERATE FILE */
