--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -47,6 +47,15 @@ body {
   color: #555;
 }
 
+.no-todos {
+  color: #65ccb8;
+}
+
+.no-todos a {
+  text-decoration: underline;
+  color: #f2f2f2;
+}
+
 /* HOME */
 
 .home-container {
@@ -340,3 +349,35 @@ body {
 }
 
 /* DASHBOARD CSS IN SEPERATE FILE */
+
+/* NOT FOUND */
+
+.not-found-container {
+  max-width: 600px;
+  margin: 0 auto;
+  margin-top: 3rem;
+  padding: 40px;
+  text-align: center;
+  background-color: #f9f9f9; /* Add your desired background color */
+  border-radius: 8px; /* Optional: Add border radius for a rounded look */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: Add shadow for depth */
+}
+
+.not-found-heading {
+  font-size: 36px;
+  margin-bottom: 20px;
+}
+
+.not-found-message {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.not-found-link {
+  color: #007bff;
+  text-decoration: none;
+}
+
+.not-found-link:hover {
+  text-decoration: underline;
+}
